feat: add daisyui and flowbite

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,13 @@
-@import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap");
+
+body {
+  @apply font-outfit;
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  color-scheme: light; /* Forces the browser to use light mode */
+}
